filters gap fix

--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -52,7 +52,6 @@
 .filter_price {
     display: flex;
     justify-content: space-between;
-    gap: 2rem;
 }
 
 .filter_price label, .filter_price span {
